# multi-structs

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: example_generated.rs  lib.rs
